--- a/AC Werkboek.ipynb
+++ b/AC Werkboek.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2978,7 +2978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3052,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -3067,7 +3067,7 @@
       "test_inverse_no_inverse (ac_tests.test_inverse_.<locals>.TestInverse) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.011s\n",
+      "Ran 3 tests in 0.012s\n",
       "\n",
       "OK\n"
      ]
@@ -3576,7 +3576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3609,6 +3609,9 @@
     }
    ],
    "source": [
+    "from sympy import *\n",
+    "s_x = symbols('x')\n",
+    "\n",
     "# Je kan latex_msquare gebruiken om een magisch vierkant van 3 bij 3 te printen, bijvoorbeeld:\n",
     "latex_msquare(np.array(((8,3,4),(1,5,9),(6,7,2))))\n",
     "\n",
@@ -3616,8 +3619,41 @@
     "                  (0, 0, 4),\n",
     "                  (0, 0, 6)))\n",
     "\n",
+    "\n",
+    "def get_known(gegeven_getallen: np.ndarray):\n",
+    "    if gegeven_getallen[0][0] != 0 and gegeven_getallen[2][2] != 0: #diagonal\n",
+    "        return (gegeven_getallen[0][0], gegeven_getallen[2][2])\n",
+    "    elif gegeven_getallen[0][1] != 0 and gegeven_getallen[2][1] != 0: #column\n",
+    "        return (gegeven_getallen[0][1], gegeven_getallen[2][1])\n",
+    "    elif gegeven_getallen[1][0] != 0 and gegeven_getallen[1][2] != 0: #row\n",
+    "        return (gegeven_getallen[1][0], gegeven_getallen[1][2])\n",
+    "\n",
+    "def solve(MS: np.ndarray, magic_sum):\n",
+    "    while len(MS.nonzero()[0]) != MS.shape[0] * MS.shape[1]:\n",
+    "        for y in range(MS.shape[0]):\n",
+    "            for x in range(MS.shape[1]):\n",
+    "                if MS[y][x] == 0:\n",
+    "                    if len(MS[y].nonzero()[0]) == 2: #row\n",
+    "                        indexes = MS[y].nonzero()[0]\n",
+    "                        MS[y][x] = list(solveset(Eq(MS[y][indexes[0]] + MS[y][indexes[1]] + s_x, magic_sum), s_x))[0]\n",
+    "                    elif len(MS[:, x].nonzero()[0]) == 2: #collumn\n",
+    "                        indexes = MS[:, x].nonzero()[0] \n",
+    "                        MS[y][x] = list(solveset(Eq(MS[indexes[0]][x] + MS[indexes[1]][x] + s_x, magic_sum), s_x))[0]\n",
+    "                    elif len(MS.diagonal().nonzero()[0]) == 2 and x == y: #diagonal\n",
+    "                        indexes = MS.diagonal().nonzero()[0] \n",
+    "                        MS[y][x] = list(solveset(Eq(MS[indexes[0]][indexes[0]] + MS[indexes[1]][indexes[1]] + s_x, magic_sum), s_x))[0] \n",
+    "\n",
     "def magisch_vierkant(gegeven_getallen: np.ndarray) -> np.ndarray:\n",
-    "    pass"
+    "    #Get the numbers to form the equation\n",
+    "    MS = gegeven_getallen.astype(float)\n",
+    "    known_numbers = get_known(gegeven_getallen)\n",
+    "\n",
+    "    #Take the output of the equation and use it for the middle number and magic sum\n",
+    "    middle_num = list(solveset(Eq(known_numbers[0] + known_numbers[1] + s_x, s_x * 3), s_x))[0]\n",
+    "    MS[1][1] = middle_num\n",
+    "    magic_sum = middle_num * 3\n",
+    "    solve(MS, magic_sum)\n",
+    "    return MS"
    ]
   },
   {
@@ -3638,7 +3674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -3648,77 +3684,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_integer (ac_tests.test_magisch_vierkant.<locals>.TestMagischVierkant) ... "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 3 4]\n",
-      " [0 0 0]\n",
-      " [0 7 0]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR\n",
-      "test_rational (ac_tests.test_magisch_vierkant.<locals>.TestMagischVierkant) ... "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[5 0 0]\n",
-      " [0 0 4]\n",
-      " [0 0 6]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_integer (ac_tests.test_magisch_vierkant.<locals>.TestMagischVierkant)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jovyan/work/ac_tests.py\", line 268, in test_integer\n",
-      "    np.testing.assert_almost_equal(magisch_vierkant(self.i), self.i2)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 585, in assert_almost_equal\n",
-      "    return assert_array_almost_equal(actual, desired, decimal, err_msg)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 1047, in assert_array_almost_equal\n",
-      "    precision=decimal)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 794, in assert_array_compare\n",
-      "    val = comparison(x, y)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 1038, in compare\n",
-      "    z = abs(x - y)\n",
-      "TypeError: unsupported operand type(s) for -: 'NoneType' and 'float'\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_rational (ac_tests.test_magisch_vierkant.<locals>.TestMagischVierkant)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jovyan/work/ac_tests.py\", line 270, in test_rational\n",
-      "    np.testing.assert_almost_equal(magisch_vierkant(self.r), self.r2)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 585, in assert_almost_equal\n",
-      "    return assert_array_almost_equal(actual, desired, decimal, err_msg)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 1047, in assert_array_almost_equal\n",
-      "    precision=decimal)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 794, in assert_array_compare\n",
-      "    val = comparison(x, y)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 1038, in compare\n",
-      "    z = abs(x - y)\n",
-      "TypeError: unsupported operand type(s) for -: 'NoneType' and 'float'\n",
+      "test_integer (ac_tests.test_magisch_vierkant.<locals>.TestMagischVierkant) ... ok\n",
+      "test_rational (ac_tests.test_magisch_vierkant.<locals>.TestMagischVierkant) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.353s\n",
+      "Ran 2 tests in 0.130s\n",
       "\n",
-      "FAILED (errors=2)\n"
+      "OK\n"
      ]
     }
    ],
@@ -3765,14 +3737,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def limit_left(func: Callable[[float], float], x: float, epsilon: float = 0.0001) -> Tuple[float, float]: # TODO\n",
     "    delta = 1 # Hoeveel zitten we links van de gevraagde waarde?\n",
     "    pass\n",
-    "\n",
     "\n",
     "def limit_right(func: Callable[[float], float], x: float, epsilon: float = 0.0001) -> Tuple[float, float]: # TODO\n",
     "    delta = 1 # Hoeveel zitten we links van de gevraagde waarde?\n",
@@ -3805,12 +3776,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_holes (ac_tests.test_limit.<locals>.TestLimit) ... FAIL\n",
+      "test_jump (ac_tests.test_limit.<locals>.TestLimit) ... ok\n",
+      "test_jump_left (ac_tests.test_limit.<locals>.TestLimit) ... ERROR\n",
+      "test_jump_right (ac_tests.test_limit.<locals>.TestLimit) ... FAIL\n",
+      "test_left_undefined_above (ac_tests.test_limit.<locals>.TestLimit) ... ERROR\n",
+      "test_left_undefined_below (ac_tests.test_limit.<locals>.TestLimit) ... ERROR\n",
+      "test_single_discontinuity (ac_tests.test_limit.<locals>.TestLimit) ... "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2.0, -29999.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FAIL\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_jump_left (ac_tests.test_limit.<locals>.TestLimit)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jovyan/work/ac_tests.py\", line 324, in test_jump_left\n",
+      "    np.testing.assert_almost_equal(limit_left(self.piecewise_function,1), 2, 3)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 600, in assert_almost_equal\n",
+      "    if abs(desired - actual) >= 1.5 * 10.0**(-decimal):\n",
+      "TypeError: unsupported operand type(s) for -: 'int' and 'NoneType'\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_left_undefined_above (ac_tests.test_limit.<locals>.TestLimit)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jovyan/work/ac_tests.py\", line 322, in test_left_undefined_above\n",
+      "    np.testing.assert_almost_equal(limit_right(self.left_undefined_function,10), 13, 3)\n",
+      "  File \"<ipython-input-40-6978c822afd1>\", line 7, in limit_right\n",
+      "    print((func(x), (func(x + epsilon) - func(x)) / epsilon))\n",
+      "TypeError: unsupported operand type(s) for -: 'float' and 'NoneType'\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_left_undefined_below (ac_tests.test_limit.<locals>.TestLimit)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jovyan/work/ac_tests.py\", line 320, in test_left_undefined_below\n",
+      "    np.testing.assert_almost_equal(limit_left(self.right_undefined_function,10), 13, 3)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 600, in assert_almost_equal\n",
+      "    if abs(desired - actual) >= 1.5 * 10.0**(-decimal):\n",
+      "TypeError: unsupported operand type(s) for -: 'int' and 'NoneType'\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_holes (ac_tests.test_limit.<locals>.TestLimit)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jovyan/work/ac_tests.py\", line 318, in test_holes\n",
+      "    np.testing.assert_equal(limit(self.holes_function,78), 195)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 381, in assert_equal\n",
+      "    raise AssertionError(msg)\n",
+      "AssertionError: \n",
+      "Items are not equal:\n",
+      " ACTUAL: None\n",
+      " DESIRED: 195\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_jump_right (ac_tests.test_limit.<locals>.TestLimit)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jovyan/work/ac_tests.py\", line 326, in test_jump_right\n",
+      "    np.testing.assert_almost_equal(limit_right(self.piecewise_function,1), -1, 3)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 585, in assert_almost_equal\n",
+      "    return assert_array_almost_equal(actual, desired, decimal, err_msg)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 1047, in assert_array_almost_equal\n",
+      "    precision=decimal)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 846, in assert_array_compare\n",
+      "    raise AssertionError(msg)\n",
+      "AssertionError: \n",
+      "Arrays are not almost equal to 3 decimals\n",
+      "\n",
+      "Mismatched elements: 2 / 2 (100%)\n",
+      "Max absolute difference: 29998.\n",
+      "Max relative difference: 29998.\n",
+      " x: array([ 2.e+00, -3.e+04])\n",
+      " y: array(-1)\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_single_discontinuity (ac_tests.test_limit.<locals>.TestLimit)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jovyan/work/ac_tests.py\", line 316, in test_single_discontinuity\n",
+      "    np.testing.assert_equal(limit(self.single_discontinuity_function,72), 180)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/numpy/testing/_private/utils.py\", line 381, in assert_equal\n",
+      "    raise AssertionError(msg)\n",
+      "AssertionError: \n",
+      "Items are not equal:\n",
+      " ACTUAL: None\n",
+      " DESIRED: 180\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 7 tests in 0.017s\n",
+      "\n",
+      "FAILED (failures=3, errors=3)\n"
+     ]
+    }
+   ],
    "source": [
     "def discontinuous_function(x: float) -> float:\n",
     "    if x == 72:\n",
