--- a/AC Werkboek.ipynb
+++ b/AC Werkboek.ipynb
@@ -57,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h2 style=\"color:orange;\">Seed reeds geïnitialiseerd.</h2>"
+       "<h3 style=\"color:#00cccc;\">Seed geïnitialiseerd.</h3>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -3569,14 +3569,14 @@
     "\n",
     "### Toelichting aanpak magische vierkanten <a id='opdr20'></a>\n",
     "\n",
-    "$\\dots %TODO $\n",
+    "De aanpak die ik heb bedacht gaat als volgt, ik zat te denken over hoe een mens dit op een slimme manier zou aanpakken(dus niet random nummer inpluggen tot het werkt). Ik kwam tot de conclusie dat je dit allemaal met lineare vergelijkingen kan oplossen en daar is een mooie library sympy voor, dus de code zal deze vergelijkingen genereren en vervolgens het antwoord in de magic square stoppen.\n",
     "\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3621,12 +3621,12 @@
     "\n",
     "\n",
     "def get_known(gegeven_getallen: np.ndarray):\n",
-    "    if gegeven_getallen[0][0] != 0 and gegeven_getallen[2][2] != 0: #diagonal\n",
-    "        return (gegeven_getallen[0][0], gegeven_getallen[2][2])\n",
-    "    elif gegeven_getallen[0][1] != 0 and gegeven_getallen[2][1] != 0: #column\n",
-    "        return (gegeven_getallen[0][1], gegeven_getallen[2][1])\n",
-    "    elif gegeven_getallen[1][0] != 0 and gegeven_getallen[1][2] != 0: #row\n",
+    "    if len(gegeven_getallen[1].nonzero()[0]) == 2: #row\n",
     "        return (gegeven_getallen[1][0], gegeven_getallen[1][2])\n",
+    "    elif len(gegeven_getallen[:, 1].nonzero()[0]) == 2: #column\n",
+    "        return (gegeven_getallen[0][1], gegeven_getallen[2][1])\n",
+    "    elif len(gegeven_getallen.diagonal().nonzero()[0]) == 2: #diagonal\n",
+    "        return (gegeven_getallen[0][0], gegeven_getallen[2][2])\n",
     "\n",
     "def solve(MS: np.ndarray, magic_sum):\n",
     "    while len(MS.nonzero()[0]) != MS.shape[0] * MS.shape[1]:\n",
@@ -3674,7 +3674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -3688,7 +3688,7 @@
       "test_rational (ac_tests.test_magisch_vierkant.<locals>.TestMagischVierkant) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.130s\n",
+      "Ran 2 tests in 0.108s\n",
       "\n",
       "OK\n"
      ]
